src/test/ui/feature-gate-repr_transparent.stderr
error[E0658]: the `#[repr(transparent)]` attribute is experimental (see issue #43036)
  --> $DIR/feature-gate-repr_transparent.rs:11:1
   |
11 | #[repr(transparent)] //~ error: the `#[repr(transparent)]` attribute is experimental
   | ^^^^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(repr_transparent)] to the crate attributes to enable

error: aborting due to previous error

If you want more information on this error, try using "rustc --explain E0658"
